<resources>
    <string name="app_name">MyNewApp</string>
    <string name="title_activity_orders">OrdersActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="Favorite">Favorites</string>
    <string name="hello_world">Hello world!</string>
    <string name="email">Email</string>
    <string name="Enter_email">Enter your email address</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet?</string>
    <string name="fullName">Full Name</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account?</string>
    <string name="registered_emailid">Please enter your Registered Email</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="Login"> <u>Login</u> </string>
    <string name="Sign_Up_here"> <u>Sign Up here.</u> </string>
    <string name="pls_S_In_Up">Please sign up or login</string>
    <string name="Not_Now"><u>Not now</u></string>
    <string name="terms_of_service"><u>Terms and Conditions.</u></string>
    <string name="terms">By creating an account you agree to the</string>
    <string name="oror">Or</string>
    <string name="facebooks">Facebook</string>
    <string name="signUpwithEmail">Sign Up New Email</string>
    <string name="Submitz">Submit</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_about_us">Map</string>
    <string name="title_activity_favorite2">FavoriteActivity2</string>
</resources>
